# first-project

./: .env.example  .gitignore  README.md  index.html  pyproject.toml  start-dashboard.bat
.claude/: settings.json
DOCS/: 01-tiger-terminal.md  02-signals.md  03-smc.md  04-risk-management.md  05-architecture.md  06-smc-deep-dive.md  07-exchange-api.md  08-data-processing.md  09-config.md  10-backtesting.md  11-logging-monitoring.md  12-scalping-playbook.md  13-glossary.md  14-journey.md  README.md
DOCS/architecture/: 00-overview.md  01-market-data-gateway.md  02-order-book-engine.md  03-tape-flow-analyzer.md  04-feature-engine.md  05-market-regime.md  06-setup-detector.md  07-decision-engine.md  08-risk-engine.md  09-execution-engine.md  10-position-manager.md  11-journal-logger.md  12-replay-simulator.md  13-expectancy-tracker.md  14-orchestrator.md  15-notifications.md
configs/: settings.example.yaml
scripts/: demo_journal_writer.py
src/scalper/: __init__.py  __main__.py
tests/: conftest.py  test_composition.py  test_config_loader.py  test_smoke_imports.py
tests/book/: test_book_state.py  test_cluster.py  test_engine.py  test_footprint.py
tests/dashboard/: test_account.py  test_api.py  test_controller.py  test_registry.py  test_stats.py  test_symbols.py  test_tailer.py
tests/decision/: test_engine.py
tests/execution/: test_binance_transport.py  test_engine.py
tests/expectancy/: test_tracker.py
tests/features/: test_engine.py
tests/gateway/: test_parsers.py  test_transport_signing.py
tests/journal/: test_logger.py  test_serialization.py
(+104 files in other folders)
