[project]
name = "scalper"
version = "0.0.1"
description = "Автоматичний скальпер для Binance USDT-M Futures (order-flow + footprint)"
requires-python = ">=3.12"
dependencies = [
    "binance-connector>=3.7",
    "websockets>=12.0",
    "aiohttp>=3.9",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "python-dateutil>=2.9",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
    "types-PyYAML",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
